# Vi-PPE-mini

./: .env.example  .gitignore  AGENT_PHASE_TRACKING_CHECKLIST.md  DATA_INSERT_PLAN.md  IMPLEMENTATION_PLAN_Vi-PPE-mini.md  README.md  pyproject.toml  requirements.txt
configs/: final_runs.yaml  models.yaml  project.yaml  v6_runs.yaml
data/: README.md
notebooks/: Vi_PPE_V5.ipynb  Vi_PPE_V5_Gemma_Llama.ipynb  Vi_PPE_V6.ipynb  phase11_colab_a100.ipynb
prompts/: baseline_generic_v6_vi.md  baseline_generic_vi.md  criteria_bias_instruction_strict_v6_vi.md  criteria_bias_mitigated_v6_vi.md  criteria_bias_mitigated_vi.md  criteria_fact_check_v6_vi.md  criteria_fact_check_vi.md  criteria_instruction_strict_v6_vi.md  criteria_instruction_vi.md  criteria_safety_v6_vi.md  criteria_safety_vi.md  fewshot_examples.jsonl
reports/: README.md  annotation_guideline.md  bias_dataset_qa_report_llm_v4.md  bias_dataset_qa_report_llm_v4_frozen.md  bias_subset_guideline.md  dataset_card.md  dataset_card_llm_v4.md  dataset_card_llm_v4_frozen.md  dataset_card_v3.md  dataset_card_v3_frozen.md  dataset_qa_report.md  dataset_qa_report_llm_v4.md  dataset_qa_report_llm_v4_frozen.md  dataset_qa_report_v3.md  dataset_qa_report_v3_frozen.md  experiment_results.md  final_colab_commands.md  final_colab_commands_bf16_b8_v3.md  final_dataset_v2_report.md  iaa_annotation_protocol.md  llm_generation_bias_v4_summary.json  llm_generation_core_v4_summary.json  llm_generation_smoke_bias_summary.json  llm_generation_smoke_bias_v2_summary.json  llm_generation_smoke_core_summary.json  pair_generation_notes.md  (+21 more)
(+103 files in other folders)
